--- a/source/shop/fw1314/2-piece-minidress.html.haml
+++ b/source/shop/fw1314/2-piece-minidress.html.haml
@@ -23,18 +23,18 @@
       %h2.composition
         Size
       %p
-        X-Small <b />
-        Small <b />
+        X-Small <br />
+        Small <br />
         Fits true to size.
       %h2.composition
         Composition & Care instructions
       %p
-        100% polyester <b />
+        100% polyester <br />
         Dry clean - any dry cleaning solvent other than trichloroethylene may be safely used. Do not bleach. Iron, low. Do not tumble dry
       %h2.availability
         Availability
       %p
-        2 Piece X-Small <b />
+        2 Piece X-Small <br />
         1 Piece Small
 
       %h2.shipping
