--- a/source/shop/fw1314/overall-black.html.haml
+++ b/source/shop/fw1314/overall-black.html.haml
@@ -5,7 +5,6 @@
     %div.left
       = image_tag "shop/items/fw13/big_lowfi/FW17-a.jpg", :"data-src" => "/img/shop/items/fw13/big/FW17-a.jpg"
       = image_tag "shop/items/fw13/big_lowfi/FW17-b.jpg", :"data-src" => "/img/shop/items/fw13/big/FW17-b.jpg"
-      = image_tag "shop/items/fw13/big_lowfi/FW17-c.jpg", :"data-src" => "/img/shop/items/fw13/big/FW17-c.jpg"
     %div.right
       %h1.title
         %span
@@ -17,22 +16,22 @@
       %h2.description
         Description
       %p
-        Two-piece black overalls comprising a regular v-neck top and striped regular-waist trousers with a wide-cut leg. The top and the trousers are two separate pieces which can be worn both separately and combined into one dungarees
+        Two-piece high-waist trousers with removable and adjustable elastic black suspenders. You can add the suspenders(sustained to the trousers through bra-hooks)and wear it as an overalls.
       %h2.composition
         Size
       %p
-        X-Small <b />
-        Small <b />
+        X-Small <br />
+        Small <br />
         Fits true to size.
       %h2.composition
         Composition & Care instructions
       %p
-        50% acrylic; 50% viscose <b />
+        50% acrylic; 50% viscose <br />
         Dry clean - any dry cleaning solvent other than trichloroethylene may be safely used. Do not bleach. Iron, low. Do not tumble dry
       %h2.availability
         Availability
       %p
-        2 Pieces X-Small <b />
+        2 Pieces X-Small <br />
         1 Piece Small
       %h2.shipping
         Shipping
