--- a/source/shop/fw1314/overall-purple.html.haml
+++ b/source/shop/fw1314/overall-purple.html.haml
@@ -18,16 +18,16 @@
       %h2.description
         Description
       %p
-        Two-piece overalls comprising a regular v-neck black top and regular-waist purple trousers with a wide-cut leg. The top and the trousers are two separate pieces which can be worn both separately and combined into one dungarees
+        Two-piece high-waist trousers with removable and adjustable elastic black suspenders. You can add the suspenders(sustained to the trousers through bra-hooks)and wear it as an overalls.
       %h2.composition
         Size
       %p
-        Small <b />
+        Small <br />
         Fits true to size.
       %h2.composition
         Composition & Care instructions
       %p
-        50% acrylic; 50% viscose <b />
+        50% acrylic; 50% viscose <br />
         Dry clean - any dry cleaning solvent other than trichloroethylene may be safely used. Do not bleach. Iron, low. Do not tumble dry
       %h2.availability
         Availability
