--- a/source/shop/fw1314/parka-chiaro.html.haml
+++ b/source/shop/fw1314/parka-chiaro.html.haml
@@ -22,8 +22,8 @@
       %h2.composition
         Size
       %p
-        X-Small <b />
-        Small <b />
+        X-Small <br />
+        Small <br />
         Medium
         Fits true to size.
       %h2.composition
@@ -35,8 +35,8 @@
       %h2.availability
         Availability
       %p
-        1 Piece X-Small
-        1 Piece Small <b />
+        1 Piece X-Small <br />
+        1 Piece Small <br />
         1 Piece Medium
       %h2.shipping
         Shipping
