--- a/source/shop/fw1314/parka-wool.html.haml
+++ b/source/shop/fw1314/parka-wool.html.haml
@@ -22,13 +22,13 @@
       %h2.composition
         Size
       %p
-        Medium <b />
+        Medium <br />
         Fits true to size.
       %h2.composition
         Composition & Care instructions
       %p
         Exterior: 100% wool.
-        Interior and hood: 100% PVC <b />
+        Interior and hood: 100% PVC <br />
         Dry clean - any dry cleaning solvent other than trichloroethylene may be safely used. Do not bleach. Iron, low. Do not tumble dry
       %h2.availability
         Availability
