--- a/source/shop/fw1314/2-piece-coat-chiaro.html.haml
+++ b/source/shop/fw1314/2-piece-coat-chiaro.html.haml
@@ -17,16 +17,16 @@
       %h2.description
         Description
       %p
-        Two-piece pale jacquard coat. The coat comprises an upper part (which can be worn separately as a waistcoat) and a bottom part (to wear combined with the upper part only). It features a round neckline and a concealed button front
+        Two-piece pale jacquard coat. The coat comprises an upper part (which can be worn separately as a jacket) and a bottom part (to wear combined with the upper part only). It features a round neckline and a concealed button front
       %h2.composition
         Size
       %p
-        Medium <b />
+        Medium <br />
         Fits true to size.
       %h2.composition
         Composition & Care instructions
       %p
-        34% cotton; 32% polycarbonate; 14% wool; 12% polyethylene; 8% viscose <b />
+        34% cotton; 32% polycarbonate; 14% wool; 12% polyethylene; 8% viscose <br />
         Dry clean - any dry cleaning solvent other than trichloroethylene may be safely used. Do not bleach. Iron, low. Do not tumble dry
       %h2.availability
         Availability
