--- a/source/shop/fw1314/2-piece-coat-purple.html.haml
+++ b/source/shop/fw1314/2-piece-coat-purple.html.haml
@@ -16,22 +16,22 @@
       %h2.description
         Description
       %p
-        Two-piece purple wool coat featuring a notch lapel and a concealed button front. The coat is comprised of an upper part (which can be worn separately as a waistcoat) and a bottom part (to wear combined with the upper part only).
+        Two-piece purple wool coat featuring a notch lapel and a concealed button front. The coat is comprised of an upper part (which can be worn separately as a jacket) and a bottom part (to wear combined with the upper part only).
       %h2.composition
         Size
       %p
-        Small <b />
-        X-Small <b />
+        Small <br />
+        X-Small <br />
         Fits true to size.
       %h2.composition
         Composition & Care instructions
       %p
-        75% wool; 20% polyamides; 5% viscose <b />
+        75% wool; 20% polyamides; 5% viscose <br />
         Dry clean - any dry cleaning solvent other than trichloroethylene may be safely used. Do not bleach. Iron, low. Do not tumble dry
       %h2.availability
         Availability
       %p
-        1 Piece Small  <b />
+        1 Piece Small  <br />
         1 Piece X-Small
 
       %h2.shipping
