--- a/source/shop/fw1314/2-piece-jacket-hood.html.haml
+++ b/source/shop/fw1314/2-piece-jacket-hood.html.haml
@@ -18,23 +18,23 @@
       %h2.description
         Description
       %p
-        Two-piece dark jacquard jacket. The jacket comprises an upper part (which can be worn separately as a waistcoat) and a single black waist-band at the bottom-end (to wear combined with the upper part only) - plus removable hood. The windbreaker features a concealed button front and a drawstring hemline
+        Two-piece dark jacquard jacket. The jacket comprises an upper part (which can be worn separately as a jacket) and a single waist-band at the bottom-end (to wear combined with the upper part only) - plus removable hood. The windbreaker features a concealed button front and a drawstring hemline
       %h2.composition
         Size
       %p
-        Small <b />
-        X-Small <b />
+        Small <br />
+        X-Small <br />
         Fits true to size.
       %h2.composition
         Composition & Care instructions
       %p
         Jacket: 34% cotton; 32% polycarbonate; 14% wool; 12% polyethylene; 8% viscose.
-        Hood: 100% PVC <b />
+        Hood: 100% PVC <br />
         Dry clean - any dry cleaning solvent other than trichloroethylene may be safely used. Do not bleach. Iron, low. Do not tumble dry.
       %h2.availability
         Availability
       %p
-        1 Piece Small <b />
+        1 Piece Small <br />
         1 Piece X-Small
 
       %h2.shipping
