--- a/source/shop/fw1314/2-piece-top-jscuronero.html.haml
+++ b/source/shop/fw1314/2-piece-top-jscuronero.html.haml
@@ -22,13 +22,13 @@
       %h2.composition
         Size
       %p
-        Medium <b />
+        Medium <br />
         Fits true to size.
       %h2.composition
         Composition & Care instructions
       %p
         Upper part (dark jacquard): 34% cotton; 32% polycarbonate; 14% wool; 12% polyethylene; 8% viscose.
-        Bottom part (black): 100% wool <b />
+        Bottom part (black): 100% wool <br />
         Dry clean - any dry cleaning solvent other than trichloroethylene may be safely used. Do not bleach. Iron, low. Do not tumble dry.
       %h2.availability
         Availability
