--- a/source/shop/fw1314/3-length-dress-purple.html.haml
+++ b/source/shop/fw1314/3-length-dress-purple.html.haml
@@ -23,12 +23,12 @@
       %h2.composition
         Size
       %p
-        Medium <b />
+        Medium <br />
         Fits true to size.
       %h2.composition
         Composition & Care instructions
       %p
-        50% acrylic; 50% viscose <b />
+        50% acrylic; 50% viscose <br />
         Dry clean - any dry cleaning solvent other than trichloroethylene may be safely used. Do not bleach. Iron, low. Do not tumble dry
       %h2.availability
         Availability
