--- a/source/shop/fw1314/3-piece-skirt-dark.html.haml
+++ b/source/shop/fw1314/3-piece-skirt-dark.html.haml
@@ -22,18 +22,18 @@
       %h2.composition
         Size
       %p
-        Small <b />
-        Medium <b />
+        Small <br />
+        Medium <br />
         Fits true to size.
       %h2.composition
         Composition & Care instructions
       %p
-        34% cotton; 32% polycarbonate; 14% wool; 12% polyethylene; 8% viscose<b />
+        34% cotton; 32% polycarbonate; 14% wool; 12% polyethylene; 8% viscose <br />
         Dry clean - any dry cleaning solvent other than trichloroethylene may be safely used. Do not bleach. Iron, low. Do not tumble dry
       %h2.availability
         Availability
       %p
-        1 Piece Small <b />
+        1 Piece Small <br />
         1 Piece Medium
       %h2.shipping
         Shipping
