--- a/source/shop/fw1314/parka-scuro.html.haml
+++ b/source/shop/fw1314/parka-scuro.html.haml
@@ -21,13 +21,13 @@
       %h2.composition
         Size
       %p
-        Medium <b />
+        Medium <br />
         Fits true to size.
       %h2.composition
         Composition & Care instructions
       %p
         Exterior: 34% cotton; 32% polycarbonate; 14% wool; 12% polyethylene; 8% viscose.
-        Interior and hood: 100% PVC <b />
+        Interior and hood: 100% PVC <br />
         Dry clean - any dry cleaning solvent other than trichloroethylene may be safely used. Do not bleach. Iron, low. Do not tumble dry
       %h2.availability
         Availability
