--- a/source/projects.html.haml
+++ b/source/projects.html.haml
@@ -1,5 +1,11 @@
 .page
   = partial "partials/header"
+
+
+  %h2.title
+    .color-box
+      = image_tag "flr_wowcracy.jpg"
+
   = partial "partials/vfno"
 
   %h2.title
