--- a/source/newsletters/wowcracy.html.haml
+++ b/source/newsletters/wowcracy.html.haml
@@ -29,28 +29,31 @@
             %tr{"width"=>"750", :valign=>"top"}
               %td
                 %p.web
-                  %a{:href=>"http://flavialarocca.com/newsletters/pressday2013_1.html?utm_source=newsletter1013&utm_medium=email&utm_campaign=pressday1013"}
+                  %a{:href=>"http://flavialarocca.com/newsletters/wowcracy.html"}
                     Can't read this email? Click here to view it online
             %tr{"width"=>"750", :valign=>"top"}
               %td
                 %h1.title
-                  WOWCRACY
+                  Newsletter, WOWCRACY
                 %hr
                 %p.subtitle
-                  The Folded Looks
+                  "The Folded Looks"
             %tr{"width"=>"750", :valign=>"top"}
               %td
                 = image_tag "logo.png" ,:class=>"logo"
             %tr{"width"=>"750", :valign=>"top"}
               %td.story
-                = image_tag "newsletter_flr-07.png"
+                = image_tag "newsletter_flr-08.png"
                 %p.description
                   "The Folded Looks" is the summary of flavialarocca's concept. <br />
                   Four modules that disclose eight different looks. All in a clutch.<br />
                   It means that you can have in a very small space the possibility to dress up in eight different ways according to what it's happening to you or around you.  <br />
                   You can go from an 'office outfit' composed of a top and a pencil skirt, to a midi dress more adapt to a 'cocktail' or a 'disco outfit' with a crop top and a miniskirt. <br />
-                  SUPPORT THE PROJECT AND PREORDER YOUR LOOK AT
-                  %a.button{:href=>"http://www.wowcracy.com/en/lab/user/340/project/the-folded-looks-flavialarocca#}
+                  SUPPORT THE PROJECT AND PRE ORDER YOUR LOOK AT
+            %tr{"width"=>"750", :valign=>"top"}
+              %td.story
+                %a.button{:href=>"http://www.wowcracy.com/en/lab/user/340/project/the-folded-looks-flavialarocca#"}
+                  WOWCRACY.COM
 
             %tr{"width"=>"750", :valign=>"top"}
               %td.story
