--- a/source/newsletters/wowcracy.html.haml
+++ b/source/newsletters/wowcracy.html.haml
@@ -34,10 +34,10 @@
             %tr{"width"=>"750", :valign=>"top"}
               %td
                 %h1.title
-                  Newsletter, WOWCRACY
+                  Newsletter, THE FOLDED LOOKS
                 %hr
                 %p.subtitle
-                  "The Folded Looks"
+                  Pre order on Wowcracy.com
             %tr{"width"=>"750", :valign=>"top"}
               %td
                 = image_tag "logo.png" ,:class=>"logo"
@@ -49,6 +49,7 @@
                   Four modules that disclose eight different looks. All in a clutch.<br />
                   It means that you can have in a very small space the possibility to dress up in eight different ways according to what it's happening to you or around you.  <br />
                   You can go from an 'office outfit' composed of a top and a pencil skirt, to a midi dress more adapt to a 'cocktail' or a 'disco outfit' with a crop top and a miniskirt. <br />
+                  Choose the one you like or create a LIMITED EDITION with the fabric you love most!
                   SUPPORT THE PROJECT AND PRE ORDER YOUR LOOK AT
             %tr{"width"=>"750", :valign=>"top"}
               %td.story
