--- a/source/newsletters/wowcracy.html.haml
+++ b/source/newsletters/wowcracy.html.haml
@@ -45,12 +45,15 @@
               %td.story
                 = image_tag "newsletter_flr-08.png"
                 %p.description
-                  "The Folded Looks" is the summary of flavialarocca's concept. <br />
-                  Four modules that disclose eight different looks. All in a clutch.<br />
+                  "The Folded Looks" is the summary of flavialarocca's concept. <br />  <br />
+                  FOUR MODULES THAT DISCLOSE EIGHT DIFFERENT LOOKS.  <br />
+                  ALL IN A CLUTCH.<br />
                   It means that you can have in a very small space the possibility to dress up in eight different ways according to what it's happening to you or around you.  <br />
-                  You can go from an 'office outfit' composed of a top and a pencil skirt, to a midi dress more adapt to a 'cocktail' or a 'disco outfit' with a crop top and a miniskirt. <br />
-                  Choose the one you like or create a LIMITED EDITION with the fabric you love most!
+                  You can go from an 'office outfit' composed of a top and a pencil skirt, to a midi dress more adapt to a 'cocktail' or a 'disco outfit' with a crop top and a miniskirt. <br /> <br />
+                  WATCH THE VIDEO AND DISCOVER HOW IT WORKS!<br />
+                  Choose the one you like or create a LIMITED EDITION with the fabric you love most!<br /> <br />
                   SUPPORT THE PROJECT AND PRE ORDER YOUR LOOK AT
+
             %tr{"width"=>"750", :valign=>"top"}
               %td.story
                 %a.button{:href=>"http://www.wowcracy.com/en/lab/user/340/project/the-folded-looks-flavialarocca#"}
