link in newsletter + white bkgr

--- a/source/css/mailing-list.css.sass
+++ b/source/css/mailing-list.css.sass
@@ -153,6 +153,8 @@ table[id="external"]
       td[class="story"]
         margin-top: px-to-em(20px)
         background-color: $giallo
+        &.white
+          background-color: white
       td[class="story blue"]
         background-color: $light-blue
         strong
