--- a/source/newsletters/wowcracy.html.haml
+++ b/source/newsletters/wowcracy.html.haml
@@ -42,7 +42,7 @@
               %td
                 = image_tag "logo.png" ,:class=>"logo"
             %tr{"width"=>"750", :valign=>"top"}
-              %td.story
+              %td.story.white
                 = image_tag "newsletter_flr-08.png"
                 %p.description
                   "The Folded Looks" is the summary of flavialarocca's concept. <br />  <br />
@@ -52,14 +52,10 @@
                   You can go from an 'office outfit' composed of a top and a pencil skirt, to a midi dress more adapt to a 'cocktail' or a 'disco outfit' with a crop top and a miniskirt. <br /> <br />
                   WATCH THE VIDEO AND DISCOVER HOW IT WORKS!<br />
                   Choose the one you like or create a LIMITED EDITION with the fabric you love most!<br /> <br />
-                  SUPPORT THE PROJECT AND PRE ORDER YOUR LOOK AT
+                  SUPPORT THE PROJECT AND PRE ORDER YOUR LOOK AT <a href="http://www.wowcracy.com/en/lab/user/340/project/the-folded-looks-flavialarocca#">WOWCRACY.COM</a>
+
 
             %tr{"width"=>"750", :valign=>"top"}
-              %td.story
-                %a.button{:href=>"http://www.wowcracy.com/en/lab/user/340/project/the-folded-looks-flavialarocca#"}
-                  WOWCRACY.COM
-
-            %tr{"width"=>"750", :valign=>"top"}
-              %td.story
+              %td.story.white
                 %a.button{:href=>"http://flavialarocca.com?utm_source=newsletter1013&utm_medium=email&utm_campaign=pressday1013"}
                   CHECK THE NEW WEBSITE
