--- a/source/newsletters/wowcracy.html.haml
+++ b/source/newsletters/wowcracy.html.haml
@@ -50,7 +50,7 @@
                   ALL IN A CLUTCH.<br />
                   It means that you can have in a very small space the possibility to dress up in eight different ways according to what it's happening to you or around you.  <br />
                   You can go from an 'office outfit' composed of a top and a pencil skirt, to a midi dress more adapt to a 'cocktail' or a 'disco outfit' with a crop top and a miniskirt. <br /> <br />
-                  WATCH THE VIDEO AND DISCOVER HOW IT WORKS!<br />
+                  <a href="http://www.wowcracy.com/en/lab/user/340/project/the-folded-looks-flavialarocca#">WATCH THE VIDEO AND DISCOVER HOW IT WORKS!</a>  <br />
                   Choose the one you like or create a LIMITED EDITION with the fabric you love most!<br /> <br />
                   SUPPORT THE PROJECT AND PRE ORDER YOUR LOOK AT <a href="http://www.wowcracy.com/en/lab/user/340/project/the-folded-looks-flavialarocca#">WOWCRACY.COM</a>
 
