--- a/source/projects.html.haml
+++ b/source/projects.html.haml
@@ -3,6 +3,7 @@
 
 
   %h2.title
+    %a{href: "http://www.wowcracy.com/en/lab/user/340/project/the-folded-looks-flavialarocca"}
     .color-box
       = image_tag "flr_wowcracy.jpg"
   = partial "partials/vfno"
