link in newsletter + white bkgr

--- a/source/newsletters/wowcracy.html.haml
+++ b/source/newsletters/wowcracy.html.haml
@@ -29,7 +29,7 @@
             %tr{"width"=>"750", :valign=>"top"}
               %td
                 %p.web
-                  %a{:href=>"http://flavialarocca.com/newsletters/wowcracy.html"}
+                  %a{:href=>"http://flavialarocca.com/newsletters/wowcracy.html?utm_source=newsletter08&utm_medium=email&utm_campaign=wowcracy"}
                     Can't read this email? Click here to view it online
             %tr{"width"=>"750", :valign=>"top"}
               %td
@@ -50,12 +50,12 @@
                   ALL IN A CLUTCH.<br />
                   It means that you can have in a very small space the possibility to dress up in eight different ways according to what it's happening to you or around you.  <br />
                   You can go from an 'office outfit' composed of a top and a pencil skirt, to a midi dress more adapt to a 'cocktail' or a 'disco outfit' with a crop top and a miniskirt. <br /> <br />
-                  <a href="http://www.wowcracy.com/en/lab/user/340/project/the-folded-looks-flavialarocca#">WATCH THE VIDEO AND DISCOVER HOW IT WORKS!</a>  <br />
+                  <a href="http://vimeo.com/74242889">WATCH THE VIDEO AND DISCOVER HOW IT WORKS!</a>  <br />
                   Choose the one you like or create a LIMITED EDITION with the fabric you love most!<br /> <br />
                   SUPPORT THE PROJECT AND PRE ORDER YOUR LOOK AT <a href="http://www.wowcracy.com/en/lab/user/340/project/the-folded-looks-flavialarocca#">WOWCRACY.COM</a>
 
 
             %tr{"width"=>"750", :valign=>"top"}
               %td.story.white
-                %a.button{:href=>"http://flavialarocca.com?utm_source=newsletter1013&utm_medium=email&utm_campaign=pressday1013"}
+                %a.button{:href=>"http://flavialarocca.com?utm_source=newsletter08&utm_medium=email&utm_campaign=wowcracy"}
                   CHECK THE NEW WEBSITE
