--- a/source/projects.html.haml
+++ b/source/projects.html.haml
@@ -4,16 +4,17 @@
 
   %h2.title
     %a{href: "http://www.wowcracy.com/en/lab/user/340/project/the-folded-looks-flavialarocca"}
-    .color-box
-      = image_tag "flr_wowcracy.jpg"
+      .color-box
+        = image_tag "flr_wowcracy.jpg"
   = partial "partials/vfno"
 
   %h2.title
     %a{href: "http://vfno2013.vogue.it/milano/iniziative-speciali/2013/07/visa-e-vfno"}
-    .color-box
-      = image_tag "flr_vfno_pics.jpg",:width => "940"
+      .color-box
+        = image_tag "flr_vfno_pics.jpg",:width => "940"
 
   %h2.title
+    %a{href:"http://www.vogue.it/trends/shop-in-the-shops/2013/05/the-talent-store-a-fidenza-village"}
     .color-box
       = image_tag "flr_fidenza_pics.jpg" ,:width => "940"
 
