--- a/source/press.html.haml
+++ b/source/press.html.haml
@@ -10,6 +10,32 @@
             PRESS COVERAGE
       .list
         %div
+          %a{href: "http://www.amica.it/2013/12/03/flavialarocca-costruzioni-di-moda/", target: "_blank"}
+            .overlay
+              = image_tag "press/lowres/amica_cover.jpg", :"data-src" => "../img/press/small/amica_cover.jpg" , :width => "134", :height => "171"
+        %div
+          %a{href: "http://www.cosmopolitan.it/moda/Stilisti-emergenti-Flavia-La-Rocca-fashion-designer-del-brand-flavialarocca", target: "_blank"}
+            .overlay
+            = image_tag "press/lowres/cosmo_cover.jpg", :"data-src" => "../img/press/small/cosmo_cover.jpg" , :width => "134", :height => "171"
+
+        %div
+        %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_a.jpg", title: "Revista Codigo - September 2013"}
+          .overlay
+          = image_tag "press/lowres/codigo_cover.jpg", :"data-src" => "../img/press/small/codigo_cover.jpg" , :width => "134", :height => "171"
+        .hidden
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_b.jpg", title: "Revista Codigo - September 2013"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_e.jpg", title: "Revista Codigo - September 2013"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_f.jpg", title: "Revista Codigo - September 2013"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_g.jpg", title: "Revista Codigo - September 2013"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_h.jpg", title: "Revista Codigo - September 2013"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_i.jpg", title: "Revista Codigo - September 2013"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_l.jpg", title: "Revista Codigo - September 2013"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_m.jpg", title: "Revista Codigo - September 2013"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_n.jpg", title: "Revista Codigo - September 2013"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_o.jpg", title: "Revista Codigo - September 2013"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_p.jpg", title: "Revista Codigo - September 2013"}
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_q.jpg", title: "Revista Codigo - September 2013"}
+        %div
           %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/21.jpg", title: "Vogue Italia - November 2013"}
             .overlay
             = image_tag "press/lowres/21_cover.jpg", :"data-src" => "../img/press/small/21_cover.jpg" , :width => "134", :height => "171"
@@ -49,23 +75,7 @@
           %a{href: "http://vestalmag.com/Blue%20My%20Mind.php", target: "_blank"}
             .overlay
             = image_tag "press/lowres/vestal_cover.jpg", :"data-src" => "../img/press/small/vestal_cover.jpg" , :width => "134", :height => "171"
-        %div
-          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_a.jpg", title: "Revista Codigo - September 2013"}
-            .overlay
-            = image_tag "press/lowres/codigo_cover.jpg", :"data-src" => "../img/press/small/codigo_cover.jpg" , :width => "134", :height => "171"
-          .hidden
-            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_b.jpg", title: "Revista Codigo - September 2013"}
-            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_e.jpg", title: "Revista Codigo - September 2013"}
-            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_f.jpg", title: "Revista Codigo - September 2013"}
-            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_g.jpg", title: "Revista Codigo - September 2013"}
-            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_h.jpg", title: "Revista Codigo - September 2013"}
-            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_i.jpg", title: "Revista Codigo - September 2013"}
-            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_l.jpg", title: "Revista Codigo - September 2013"}
-            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_m.jpg", title: "Revista Codigo - September 2013"}
-            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_n.jpg", title: "Revista Codigo - September 2013"}
-            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_o.jpg", title: "Revista Codigo - September 2013"}
-            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_p.jpg", title: "Revista Codigo - September 2013"}
-            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/codigo_q.jpg", title: "Revista Codigo - September 2013"}
+
         %div
           %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/12a.jpg", title: "Maison Decor - July 2013"}
             .overlay
