--- a/source/css/partials/_960.sass
+++ b/source/css/partials/_960.sass
@@ -1,4 +1,14 @@
 +at-breakpoint($break-3)
+  #banner
+    +span-columns(12,12)
+    a
+      span
+        margin-top: 100px
+        font-size: 22px
+        line-height: 24px
+        z-index: 2
+        +pre(3)
+        +span-columns(3,10)
   #header
     #main-menu
       +squish(0,0)
