--- a/source/css/site.css.sass
+++ b/source/css/site.css.sass
@@ -22,6 +22,7 @@ $legacy-support-for-ie: true
 @import partials/640
 @import partials/960
 @import partials/1280
+@import vendor/dropit
 
 @import vendor/jquery.fancybox
 
