--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,8 +1,8 @@
 .page
   = partial "partials/header"
   = partial "partials/banner-wowcracy"
-  = partial "partials/banner"
-  = partial "partials/collection-gallery"
+  //= partial "partials/banner"
+  //= partial "partials/collection-gallery"
   = partial "partials/share"
   #video-container
     .color-box
