--- a/source/layouts/html5.haml
+++ b/source/layouts/html5.haml
@@ -23,18 +23,18 @@
 		
 		<!-- Favicons and touch icons -->
 		<!-- For retina-display iPads -->
-		%link{ :href=>"apple-touch-icon-144x144-precomposed.png", :rel=>"apple-touch-icon-precomposed", :sizes=>"144x144", :type=>"image/png" }
+		%link{ :href=>"/apple-touch-icon-144x144-precomposed.png", :rel=>"apple-touch-icon-precomposed", :sizes=>"144x144", :type=>"image/png" }
 		<!-- For retina-display iPhones -->
-		%link{ :href=>"apple-touch-icon-144x144-precomposed.png", :rel=>"apple-touch-icon-precomposed", :sizes=>"114x114", :type=>"image/png" }
+		%link{ :href=>"/apple-touch-icon-144x144-precomposed.png", :rel=>"apple-touch-icon-precomposed", :sizes=>"114x114", :type=>"image/png" }
 		<!-- For iPad 1 -->
-		%link{ :href=>"apple-touch-icon-72x72-precomposed.png", :rel=>"apple-touch-icon-precomposed", :sizes=>"72x72", :type=>"image/png" }
+		%link{ :href=>"/apple-touch-icon-72x72-precomposed.png", :rel=>"apple-touch-icon-precomposed", :sizes=>"72x72", :type=>"image/png" }
 		<!-- For iPhone 3G, iPod Touch and Android -->
-		%link{ :href=>"apple-touch-icon-57x57-precomposed.png", :rel=>"apple-touch-icon-precomposed", :type=>"image/png" }
+		%link{ :href=>"/apple-touch-icon-57x57-precomposed.png", :rel=>"apple-touch-icon-precomposed", :type=>"image/png" }
 		<!-- For Nokia -->
-		%link{ :href=>"apple-touch-icon-original.png", :rel=>"shortcut icon" }
+		%link{ :href=>"/apple-touch-icon-original.png", :rel=>"shortcut icon" }
 		<!-- For everything else -->
-		%link{ :href=>"favicon.png", :rel=>"shortcut icon", :type=>"image/png" }
-		%link{ :href=>"favicon.ico", :rel=>"shortcut icon", :type=>"image/x-icon" }
+		%link{ :href=>"/favicon.png", :rel=>"shortcut icon", :type=>"image/png" }
+		%link{ :href=>"/favicon.ico", :rel=>"shortcut icon", :type=>"image/x-icon" }
 
 		<!-- For Google+ bidirectional linking -->
 		-#%link{ :href=>"https://plus.google.com/103695675753742819996", :rel=>"publisher" }
@@ -42,10 +42,9 @@
 		= javascript_include_tag "vendor/modernizr"
 
 		= stylesheet_link_tag "site"
-		:javascript
-			var analytics=analytics||[];(function(){var e=["identify","track","trackLink","trackForm","trackClick","trackSubmit","page","pageview","ab","alias","ready","group"],t=function(e){return function(){analytics.push([e].concat(Array.prototype.slice.call(arguments,0)))}};for(var n=0;n<e.length;n++)analytics[e[n]]=t(e[n])})(),analytics.load=function(e){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src=("https:"===document.location.protocol?"https://":"http://")+"d2dq2ahtl5zl1z.cloudfront.net/analytics.js/v1/"+e+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(t,n)};
-			analytics.load("45pabeyvy9");
+
 		
 	%body
+		= partial'partials/tag-manager'
 		= yield
 		
