--- a/source/partials/_header.haml
+++ b/source/partials/_header.haml
@@ -6,10 +6,17 @@
     .container
       %nav#main-menu
         .color-box
-        %ul
+        %ul.menu
           %li
-            %a#preview-link{href:"/collections/fw13.html"}
-              collection
+            %a#preview-link{href:"#"}
+              collections
+            %ul
+              .color-box
+              %li
+                %a{href:"/collections/fw13.html"} FW13
+              %li
+                %a{href:"/collections/ss14.html"} SS14
+
           %li
             %a#concept-link{href:"http://flavialarocca.com#video-container"}
               concept
