--- a/source/shop/fw13-list.html.haml
+++ b/source/shop/fw13-list.html.haml
@@ -13,20 +13,21 @@
 
       .list
         %div
-          %a{:href =>  "/shop/fw1314/2-piece-top-jscuro.html"}
-            .info
-              %p
-                2-piece top<br />
-                195€
-              .bkgr
-            .overlay
-            = image_tag "shop/list/fw13/small_lowfi/FW1-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW1-list.jpg"
+
+          .info
+            %p
+              2-piece top<br />
+              SOLD OUT
+            .bkgr
+          .overlay
+          = image_tag "shop/list/fw13/small_lowfi/FW1-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW1-list.jpg"
         %div
           %a{:href =>  "/shop/fw1314/2-piece-top-jscuronero.html"}
             .info
               %p
                 2-piece top<br />
-                180€
+                <span style= "text-decoration: line-through; font-size: 12px">180€</span><br />
+                90€
               .bkgr
             .overlay
             = image_tag "shop/list/fw13/small_lowfi/FW2-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW2-list.jpg"
@@ -35,27 +36,29 @@
             .info
               %p
                 2-piece top<br />
-                180€
+                <span style= "text-decoration: line-through; font-size: 12px">180€</span><br />
+                90€
               .bkgr
             .overlay
             = image_tag "shop/list/fw13/small_lowfi/FW3-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW3-list.jpg"
 
         %div
-          %a{:href =>  "/shop/fw1314/2-piece-top-jchiaro-collov.html"}
-            .info
-              %p
-                2-piece top<br />
-                205€
-              .bkgr
-            .overlay
-            = image_tag "shop/list/fw13/small_lowfi/FW4-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW4-list.jpg"
+
+          .info
+            %p
+              2-piece top<br />
+              SOLD OUT
+            .bkgr
+          .overlay
+          = image_tag "shop/list/fw13/small_lowfi/FW4-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW4-list.jpg"
 
         %div
           %a{:href =>  "/shop/fw1314/2-piece-skirt-black.html"}
             .info
               %p
                 2-piece skirt <br />
-                260€
+                <span style= "text-decoration: line-through; font-size: 12px">260€</span><br />
+                130€
               .bkgr
             .overlay
             = image_tag "shop/list/fw13/small_lowfi/FW13-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW13-list.jpg"
@@ -65,54 +68,56 @@
             .info
               %p
                 2-piece skirt <br />
-                287€
+                <span style= "text-decoration: line-through; font-size: 12px">287€</span><br />
+                143€
               .bkgr
             .overlay
             = image_tag "shop/list/fw13/small_lowfi/FW14-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW14-list.jpg"
         %div
-          %a{:href =>  "/shop/fw1314/3-piece-skirt-dark.html"}
-            .info
-              %p
-                3-piece skirt dark<br />
-                325€
-              .bkgr
-            .overlay
-            = image_tag "shop/list/fw13/small_lowfi/FW11-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW11-list.jpg"
+
+          .info
+            %p
+              3-piece skirt dark<br />
+              SOLD OUT
+            .bkgr
+          .overlay
+          = image_tag "shop/list/fw13/small_lowfi/FW11-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW11-list.jpg"
         %div
-          %a{:href =>  "/shop/fw1314/2-piece-skirt-pale.html"}
-            .info
-              %p
-                2-piece skirt <br />
-                287,50€
-              .bkgr
-            .overlay
-            = image_tag "shop/list/fw13/small_lowfi/FW12-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW12-list.jpg"
+
+          .info
+            %p
+              2-piece skirt <br />
+              SOLD OUT
+            .bkgr
+          .overlay
+          = image_tag "shop/list/fw13/small_lowfi/FW12-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW12-list.jpg"
         %div
-          %a{:href =>  "/shop/fw1314/2-piece-minidress.html"}
-            .info
-              %p
-                2-piece minidress/top <br />
-                287€
-              .bkgr
-            .overlay
-            = image_tag "shop/list/fw13/small_lowfi/FW20-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW20-list.jpg"
+
+          .info
+            %p
+              2-piece minidress/top <br />
+              SOLD OUT
+            .bkgr
+          .overlay
+          = image_tag "shop/list/fw13/small_lowfi/FW20-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW20-list.jpg"
 
         %div
-          %a{:href =>  "/shop/fw1314/3-length-dress-purple.html"}
-            .info
-              %p
-                3-lenght dress<br />
-                225€
-              .bkgr
-            .overlay
-            = image_tag "shop/list/fw13/small_lowfi/FW16-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW16-list.jpg"
+
+          .info
+            %p
+              3-lenght dress<br />
+              SOLD OUT
+            .bkgr
+          .overlay
+          = image_tag "shop/list/fw13/small_lowfi/FW16-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW16-list.jpg"
 
         %div
           %a{:href =>  "/shop/fw1314/overall-black.html"}
             .info
               %p
                 2-piece overalls/trousers<br />
-                260€
+                <span style= "text-decoration: line-through; font-size: 12px">260€</span><br />
+                130€
               .bkgr
             .overlay
             = image_tag "shop/list/fw13/small_lowfi/FW17-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW17-list.jpg"
@@ -121,29 +126,30 @@
             .info
               %p
                 2-piece overalls/trousers<br />
-                260€
+                <span style= "text-decoration: line-through; font-size: 12px">260€</span><br />
+                130€
               .bkgr
             .overlay
             = image_tag "shop/list/fw13/small_lowfi/FW18-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW18-list.jpg"
         %div
-          %a{:href =>  "/shop/fw1314/overall-white.html"}
-            .info
-              %p
-                2-piece overalls/trousers<br />
-                260€
-              .bkgr
-            .overlay
-            = image_tag "shop/list/fw13/small_lowfi/FW19-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW19-list.jpg"
+
+          .info
+            %p
+              2-piece overalls/trousers<br />
+              SOLD OUT
+            .bkgr
+          .overlay
+          = image_tag "shop/list/fw13/small_lowfi/FW19-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW19-list.jpg"
 
         %div
-          %a{:href =>  "/shop/fw1314/2-piece-coat-purple.html"}
-            .info
-              %p
-                2-piece coat <br />
-                425€
-              .bkgr
-            .overlay
-            = image_tag "shop/list/fw13/small_lowfi/FW15-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW15-list.jpg"
+
+          .info
+            %p
+              2-piece coat <br />
+              SOLD OUT
+            .bkgr
+          .overlay
+          = image_tag "shop/list/fw13/small_lowfi/FW15-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW15-list.jpg"
 
 
 
@@ -152,7 +158,8 @@
             .info
               %p
                 2-piece coat <br />
-                515€
+                <span style= "text-decoration: line-through; font-size: 12px">515€</span><br />
+                257€
               .bkgr
             .overlay
             = image_tag "shop/list/fw13/small_lowfi/FW7-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW7-list.jpg"
@@ -162,25 +169,27 @@
             .info
               %p
                 2-piece coat <br />
-                515€
+                <span style= "text-decoration: line-through; font-size: 12px">515€</span><br />
+                257€
               .bkgr
             .overlay
             = image_tag "shop/list/fw13/small_lowfi/FW6-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW6-list.jpg"
         %div
-          %a{:href =>  "/shop/fw1314/2-piece-jacket-hood.html"}
-            .info
-              %p
-                2-piece jacket w/ detachable hood <br />
-                515€
-              .bkgr
-            .overlay
-            = image_tag "shop/list/fw13/small_lowfi/FW5-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW5-list.jpg"
+
+          .info
+            %p
+              2-piece jacket w/ detachable hood <br />
+              SOLD OUT
+            .bkgr
+          .overlay
+          = image_tag "shop/list/fw13/small_lowfi/FW5-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW5-list.jpg"
         %div
           %a{:href =>  "/shop/fw1314/parka-chiaro.html"}
             .info
               %p
                 double-faced hooded parka<br />
-                487,50€
+                <span style= "text-decoration: line-through; font-size: 12px">487.50€</span><br />
+                244€
               .bkgr
             .overlay
             = image_tag "shop/list/fw13/small_lowfi/FW8-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW8-list.jpg"
@@ -189,7 +198,8 @@
             .info
               %p
                 double-faced hooded parka<br />
-                487,50€
+                <span style= "text-decoration: line-through; font-size: 12px">487.50€</span><br />
+                244€
               .bkgr
             .overlay
             = image_tag "shop/list/fw13/small_lowfi/FW9-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW9-list.jpg"
@@ -198,7 +208,8 @@
             .info
               %p
                 double-faced hooded parka<br />
-                450€
+                <span style= "text-decoration: line-through; font-size: 12px">450€</span><br />
+                225€
               .bkgr
             .overlay
             = image_tag "shop/list/fw13/small_lowfi/FW10-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW10-list.jpg"
