--- a/source/shop/fw1314/2-piece-coat-purple.html.haml
+++ b/source/shop/fw1314/2-piece-coat-purple.html.haml
@@ -10,8 +10,11 @@
         %span
           2-piece coat
       %h2.price
-        %span{:style=>"font-size: 24px"}
+        %span{:style=>"text-decoration: line-through; font-size: 18px"}
           425€
+        %span{:style=>"font-size: 24px"}
+          212€
+
 
       %h2.description
         Description
