--- a/source/shop/fw1314/2-piece-coat-scuro.html.haml
+++ b/source/shop/fw1314/2-piece-coat-scuro.html.haml
@@ -11,8 +11,10 @@
         %span
           2-piece coat
       %h2.price
-        %span{:style=>"font-size: 24px"}
+        %span{:style=>"text-decoration: line-through; font-size: 18px"}
           515€
+        %span{:style=>"font-size: 24px"}
+          257€
 
       %h2.description
         Description
