--- a/source/shop/fw1314/2-piece-minidress.html.haml
+++ b/source/shop/fw1314/2-piece-minidress.html.haml
@@ -13,8 +13,10 @@
         %span
           2-piece mini dress/top
       %h2.price
-        %span{:style=>"font-size: 24px"}
+        %span{:style=>"text-decoration: line-through; font-size: 18px"}
           287€
+        %span{:style=>"font-size: 24px"}
+          143€
 
       %h2.description
         Description
