--- a/source/shop/fw1314/2-piece-skirt-pale.html.haml
+++ b/source/shop/fw1314/2-piece-skirt-pale.html.haml
@@ -10,8 +10,10 @@
         %span
           2-piece skirt
       %h2.price
+        %span{:style=>"text-decoration: line-through; font-size: 18px"}
+          287.50€
         %span{:style=>"font-size: 24px"}
-          287,50€
+          144€
 
       %h2.description
         Description
