--- a/source/shop/fw1314/2-piece-top-jchiaro.html.haml
+++ b/source/shop/fw1314/2-piece-top-jchiaro.html.haml
@@ -12,8 +12,10 @@
         %span
           2-piece top
       %h2.price
-        %span{:style=>"font-size: 24px"}
+        %span{:style=>"text-decoration: line-through; font-size: 18px"}
           180€
+        %span{:style=>"font-size: 24px"}
+          90€
 
       %h2.description
         Description
