--- a/source/shop/fw1314/2-piece-top-jscuro.html.haml
+++ b/source/shop/fw1314/2-piece-top-jscuro.html.haml
@@ -11,8 +11,10 @@
         %span
           2-piece top
       %h2.price
-        %span{:style=>"font-size: 24px"}
+        %span{:style=>"text-decoration: line-through; font-size: 18px"}
           195€
+        %span{:style=>"font-size: 24px"}
+          97€
 
       %h2.description
         Description
