--- a/source/shop/fw1314/3-length-dress-purple.html.haml
+++ b/source/shop/fw1314/3-length-dress-purple.html.haml
@@ -13,8 +13,10 @@
         %span
           3-length dress
       %h2.price
-        %span{:style=>"font-size: 24px"}
+        %span{:style=>"text-decoration: line-through; font-size: 18px"}
           225€
+        %span{:style=>"font-size: 24px"}
+          112€
 
       %h2.description
         Description
