--- a/source/shop/fw1314/overall-purple.html.haml
+++ b/source/shop/fw1314/overall-purple.html.haml
@@ -12,8 +12,10 @@
         %span
           2-piece overalls/trousers
       %h2.price
-        %span{:style=>"font-size: 24px"}
+        %span{:style=>"text-decoration: line-through; font-size: 18px"}
           260€
+        %span{:style=>"font-size: 24px"}
+          130€
 
       %h2.description
         Description
