--- a/source/shop/fw1314/parka-scuro.html.haml
+++ b/source/shop/fw1314/parka-scuro.html.haml
@@ -11,8 +11,10 @@
         %span
           Double-faced hooded parka
       %h2.price
+        %span{:style=>"text-decoration: line-through; font-size: 18px"}
+          487.50€
         %span{:style=>"font-size: 24px"}
-          487,50€
+          244€
 
       %h2.description
         Description
