--- a/source/css/partials/_320.sass
+++ b/source/css/partials/_320.sass
@@ -24,6 +24,19 @@ img
     position: relative
     max-width: 100%
     height: 100%
+  a
+    color: $viola
+    text-decoration: none
+
+    span
+      position: absolute
+      margin-top: 30px
+      font-size: 12px
+      line-height: 14px
+      z-index: 2
+      +pre(1)
+      +span-columns(3,7)
+
 
 #shop-list
   margin-top: 40px
@@ -164,19 +177,25 @@ img
     +stretch(0,0,0,0)
     opacity: 0.8
     background-color: #E2F1EC
-  ul
+  ul.menu
     +horizontal-list-container
     text-align: center
     position: relative
+    overflow: visible
+
     +span-columns(7,7)
-    li
+    &>li
       +horizontal-list-item
       float: none
       text-align: center
       display: inline-block
+
       &.active
         a
           text-decoration: underline
+    li
+      position: relative
+      z-index: 2
   a
     text-decoration: none
     text-transform: uppercase
