--- a/source/css/partials/_480.sass
+++ b/source/css/partials/_480.sass
@@ -1,4 +1,14 @@
 +at-breakpoint($break-1)
+  #banner
+    +span-columns(10,10)
+    a
+      span
+        margin-top: 50px
+        font-size: 22px
+        line-height: 24px
+        z-index: 2
+        +pre(1)
+        +span-columns(3,10)
   #header
     #main-menu
       +squish(1,1,10)
