--- a/source/partials/_share.haml
+++ b/source/partials/_share.haml
@@ -4,14 +4,14 @@
       If you love the project, share it!
     .addthis_toolbox
       .custom_images
-        %a.addthis_button_facebook{style: "text-decoration:none; cursor: pointer; "}
+        %a.addthis_button_facebook.sharebt{style: "text-decoration:none; cursor: pointer; "}
           = image_tag "share-buttons/facebook.png", border: "0", width: "35", height: "35", alt: "facebook"
-        %a.addthis_button_thefancy{style: "text-decoration:none; cursor: pointer; "}
+        %a.addthis_button_thefancy.sharebt{style: "text-decoration:none; cursor: pointer; "}
           = image_tag "share-buttons/fancy.png", border: "0", width: "35", height: "35", alt: "facebook"
-        %a.addthis_button_twitter{style: "text-decoration:none; cursor: pointer; "}
+        %a.addthis_button_twitter.sharebt{style: "text-decoration:none; cursor: pointer; "}
           = image_tag "share-buttons/twitter.png", border: "0", width: "35", height: "35", alt: "facebook"
-        %a.addthis_button_google_plusone_share{style: "text-decoration:none; cursor: pointer; "}
+        %a.addthis_button_google_plusone_share.sharebt{style: "text-decoration:none; cursor: pointer; "}
           = image_tag "share-buttons/plus.png", border: "0", width: "35", height: "35", alt: "facebook"
-        %a.addthis_button_pinterest_share{style: "text-decoration:none; cursor: pointer; "}
+        %a.addthis_button_pinterest_share.sharebt{style: "text-decoration:none; cursor: pointer; "}
           = image_tag "share-buttons/pinterest.png", border: "0", width: "35", height: "35", alt: "facebook"
-      %script{src: "//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-523a16af2954354d", type: "text/javascript"}
+
