--- a/source/shop/fw1314/2-piece-jacket-hood.html.haml
+++ b/source/shop/fw1314/2-piece-jacket-hood.html.haml
@@ -12,8 +12,10 @@
         %span
           2-piece jacket with detachable hood
       %h2.price
-        %span{:style=>"font-size: 24px"}
+        %span{:style=>"text-decoration: line-through; font-size: 18px"}
           515€
+        %span{:style=>"font-size: 24px"}
+          257€
 
       %h2.description
         Description
