--- a/source/shop/fw1314/2-piece-skirt-black.html.haml
+++ b/source/shop/fw1314/2-piece-skirt-black.html.haml
@@ -11,8 +11,10 @@
         %span
           2-piece skirt
       %h2.price
-        %span{:style=>"font-size: 24px"}
+        %span{:style=>"text-decoration: line-through; font-size: 18px"}
           260€
+        %span{:style=>"font-size: 24px"}
+          130€
 
       %h2.description
         Description
