--- a/source/shop/fw1314/2-piece-skirt-white.html.haml
+++ b/source/shop/fw1314/2-piece-skirt-white.html.haml
@@ -12,8 +12,10 @@
         %span
           2-piece skirt
       %h2.price
-        %span{:style=>"font-size: 24px"}
+        %span{:style=>"text-decoration: line-through; font-size: 18px"}
           287€
+        %span{:style=>"font-size: 24px"}
+          143€
 
       %h2.description
         Description
