--- a/source/shop/fw1314/2-piece-top-jchiaro-collov.html.haml
+++ b/source/shop/fw1314/2-piece-top-jchiaro-collov.html.haml
@@ -12,8 +12,10 @@
         %span
           2-piece top with detachable collar
       %h2.price
-        %span{:style=>"font-size: 24px"}
+        %span{:style=>"text-decoration: line-through; font-size: 18px"}
           205€
+        %span{:style=>"font-size: 24px"}
+          102.5€
 
       %h2.description
         Description
