--- a/source/shop/fw1314/3-piece-skirt-dark.html.haml
+++ b/source/shop/fw1314/3-piece-skirt-dark.html.haml
@@ -12,8 +12,10 @@
         %span
           3-piece skirt
       %h2.price
-        %span{:style=>"font-size: 24px"}
+        %span{:style=>"text-decoration: line-through; font-size: 18px"}
           325€
+        %span{:style=>"font-size: 24px"}
+          162€
 
       %h2.description
         Description
