--- a/source/shop/fw1314/parka-wool.html.haml
+++ b/source/shop/fw1314/parka-wool.html.haml
@@ -12,8 +12,10 @@
         %span
           Double-faced hooded parka
       %h2.price
-        %span{:style=>"font-size: 24px"}
+        %span{:style=>"text-decoration: line-through; font-size: 18px"}
           450€
+        %span{:style=>"font-size: 24px"}
+          225€
 
       %h2.description
         Description
