--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,5 +1,6 @@
 .page
   = partial "partials/header"
+  = partial "partials/banner-ss14"
   = partial "partials/banner-wowcracy"
   //= partial "partials/banner"
   //= partial "partials/collection-gallery"
