--- a/source/css/partials/_320.sass
+++ b/source/css/partials/_320.sass
@@ -47,7 +47,7 @@ img
     margin-left: 0
   #ss-list
     +span-columns(7,7)
-    background-color: $light-blue
+    background-color: #ffffff
     margin-left: 0
   #people-list
     +span-columns(7,7)
@@ -176,7 +176,7 @@ img
   .color-box
     +stretch(0,0,0,0)
     opacity: 0.8
-    background-color: #E2F1EC
+    background-color: #FEF6F1
   ul.menu
     +horizontal-list-container
     text-align: center
