--- a/source/shop/fw13-list.html.haml
+++ b/source/shop/fw13-list.html.haml
@@ -32,15 +32,13 @@
             .overlay
             = image_tag "shop/list/fw13/small_lowfi/FW2-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW2-list.jpg"
         %div
-          %a{:href =>  "/shop/fw1314/2-piece-top-jchiaro.html"}
-            .info
-              %p
-                2-piece top<br />
-                <span style= "text-decoration: line-through; font-size: 12px">180€</span><br />
-                90€
-              .bkgr
-            .overlay
-            = image_tag "shop/list/fw13/small_lowfi/FW3-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW3-list.jpg"
+          .info
+            %p
+              2-piece top<br />
+              SOLD OUT
+            .bkgr
+          .overlay
+          = image_tag "shop/list/fw13/small_lowfi/FW3-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW3-list.jpg"
 
         %div
 
@@ -64,17 +62,14 @@
             = image_tag "shop/list/fw13/small_lowfi/FW13-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW13-list.jpg"
 
         %div
-          %a{:href =>  "/shop/fw1314/2-piece-skirt-white.html"}
-            .info
-              %p
-                2-piece skirt <br />
-                <span style= "text-decoration: line-through; font-size: 12px">287€</span><br />
-                143€
-              .bkgr
-            .overlay
-            = image_tag "shop/list/fw13/small_lowfi/FW14-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW14-list.jpg"
+          .info
+            %p
+              2-piece skirt <br />
+              SOLD OUT
+            .bkgr
+          .overlay
+          = image_tag "shop/list/fw13/small_lowfi/FW14-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW14-list.jpg"
         %div
-
           .info
             %p
               3-piece skirt dark<br />
@@ -112,25 +107,23 @@
           = image_tag "shop/list/fw13/small_lowfi/FW16-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW16-list.jpg"
 
         %div
-          %a{:href =>  "/shop/fw1314/overall-black.html"}
-            .info
-              %p
-                2-piece overalls/trousers<br />
-                <span style= "text-decoration: line-through; font-size: 12px">260€</span><br />
-                130€
-              .bkgr
-            .overlay
-            = image_tag "shop/list/fw13/small_lowfi/FW17-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW17-list.jpg"
+
+          .info
+            %p
+              2-piece overalls/trousers<br />
+              SOLD OUT
+            .bkgr
+          .overlay
+          = image_tag "shop/list/fw13/small_lowfi/FW17-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW17-list.jpg"
         %div
-          %a{:href =>  "/shop/fw1314/overall-purple.html"}
-            .info
-              %p
-                2-piece overalls/trousers<br />
-                <span style= "text-decoration: line-through; font-size: 12px">260€</span><br />
-                130€
-              .bkgr
-            .overlay
-            = image_tag "shop/list/fw13/small_lowfi/FW18-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW18-list.jpg"
+
+          .info
+            %p
+              2-piece overalls/trousers<br />
+              SOLD OUT
+            .bkgr
+          .overlay
+          = image_tag "shop/list/fw13/small_lowfi/FW18-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW18-list.jpg"
         %div
 
           .info
@@ -154,26 +147,24 @@
 
 
         %div
-          %a{:href =>  "/shop/fw1314/2-piece-coat-chiaro.html"}
-            .info
-              %p
-                2-piece coat <br />
-                <span style= "text-decoration: line-through; font-size: 12px">515€</span><br />
-                257€
-              .bkgr
-            .overlay
-            = image_tag "shop/list/fw13/small_lowfi/FW7-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW7-list.jpg"
+
+          .info
+            %p
+              2-piece coat <br />
+              SOLD OUT
+            .bkgr
+          .overlay
+          = image_tag "shop/list/fw13/small_lowfi/FW7-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW7-list.jpg"
 
         %div
-          %a{:href =>  "/shop/fw1314/2-piece-coat-scuro.html"}
-            .info
-              %p
-                2-piece coat <br />
-                <span style= "text-decoration: line-through; font-size: 12px">515€</span><br />
-                257€
-              .bkgr
-            .overlay
-            = image_tag "shop/list/fw13/small_lowfi/FW6-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW6-list.jpg"
+
+          .info
+            %p
+              2-piece coat <br />
+              SOLD OUT
+            .bkgr
+          .overlay
+          = image_tag "shop/list/fw13/small_lowfi/FW6-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW6-list.jpg"
         %div
 
           .info
@@ -184,35 +175,32 @@
           .overlay
           = image_tag "shop/list/fw13/small_lowfi/FW5-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW5-list.jpg"
         %div
-          %a{:href =>  "/shop/fw1314/parka-chiaro.html"}
-            .info
-              %p
-                double-faced hooded parka<br />
-                <span style= "text-decoration: line-through; font-size: 12px">487.50€</span><br />
-                244€
-              .bkgr
-            .overlay
-            = image_tag "shop/list/fw13/small_lowfi/FW8-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW8-list.jpg"
+
+          .info
+            %p
+              double-faced hooded parka<br />
+              SOLD OUT
+            .bkgr
+          .overlay
+          = image_tag "shop/list/fw13/small_lowfi/FW8-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW8-list.jpg"
         %div
-          %a{:href =>  "/shop/fw1314/parka-scuro.html"}
-            .info
-              %p
-                double-faced hooded parka<br />
-                <span style= "text-decoration: line-through; font-size: 12px">487.50€</span><br />
-                244€
-              .bkgr
-            .overlay
-            = image_tag "shop/list/fw13/small_lowfi/FW9-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW9-list.jpg"
+
+          .info
+            %p
+              double-faced hooded parka<br />
+              SOLD OUT
+            .bkgr
+          .overlay
+          = image_tag "shop/list/fw13/small_lowfi/FW9-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW9-list.jpg"
         %div
-          %a{:href =>  "/shop/fw1314/parka-wool.html"}
-            .info
-              %p
-                double-faced hooded parka<br />
-                <span style= "text-decoration: line-through; font-size: 12px">450€</span><br />
-                225€
-              .bkgr
-            .overlay
-            = image_tag "shop/list/fw13/small_lowfi/FW10-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW10-list.jpg"
+
+          .info
+            %p
+              double-faced hooded parka<br />
+              SOLD OUT
+            .bkgr
+          .overlay
+          = image_tag "shop/list/fw13/small_lowfi/FW10-list.jpg", :"data-src" => "../img/shop/list/fw13/small/FW10-list.jpg"
   = partial "partials/footer"
 
 
