--- a/source/partials/_banner-wowcracy.haml
+++ b/source/partials/_banner-wowcracy.haml
@@ -1,5 +1,5 @@
 #banner
   %h2.title
-    %a{href: "http://www.wowcracy.com/en/lab/user/340/project/the-folded-looks-flavialarocca"}
+    %a{href: "http://www.wowcracy.com/en/lab/user/340/project/flavialarocca-aw14-collection-live-from-estethica-lfw"}
 
-      = image_tag "modulo_wowcracy.jpg"
+      = image_tag "flr_wowcracy2-16.png"
