--- a/source/projects.html.haml
+++ b/source/projects.html.haml
@@ -1,11 +1,13 @@
 .page
   = partial "partials/header"
 
+  = partial "partials/banner-wowcracy"
 
   %h2.title
     %a{href: "http://www.wowcracy.com/en/lab/user/340/project/the-folded-looks-flavialarocca"}
       .color-box
         = image_tag "flr_wowcracy.jpg"
+
   = partial "partials/vfno"
 
   %h2.title
