new stores + home rework + projects

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,6 +1,7 @@
 .page
   = partial "partials/header"
   = partial "partials/banner-ss14"
+  = partial "partials/master-and-muse"
   = partial "partials/banner-wowcracy"
   //= partial "partials/banner"
   //= partial "partials/collection-gallery"
