--- a/source/partials/_banner-wowcracy.haml
+++ b/source/partials/_banner-wowcracy.haml
@@ -2,4 +2,4 @@
   %h2.title
     %a{href: "http://www.wowcracy.com/en/lab/user/340/project/flavialarocca-aw14-collection-live-from-estethica-lfw"}
 
-      = image_tag "flr_wowcracy2-16.png"
+      = image_tag "flr_website_wowcracy-16.png"
