--- a/source/projects.html.haml
+++ b/source/projects.html.haml
@@ -1,6 +1,6 @@
 .page
   = partial "partials/header"
-
+  = partial "partials/master-and-muse"
   = partial "partials/banner-wowcracy"
 
   %h2.title
