--- a/source/stores.html.haml
+++ b/source/stores.html.haml
@@ -11,6 +11,30 @@
     %ul
       %li
         .color-box
+          = image_tag "stores/mastermuse-02.png"
+        %h2
+          MASTER AND MUSE
+        %p
+          available on yoox.com
+        %p
+          %a{href:"http://www.yoox.com/it/donna/shoponline?dept=ss14_fullselection&gender=D&page=1&season=X&#/d=27326&dept=ss14_fullselection&gender=D&page=1&season=X"}
+            www.masterandmuse.com
+
+      %li
+        .color-box
+          = image_tag "stores/agora-02.png"
+        %h2
+          AGORÀ
+        %p
+          %a{href:"https://www.facebook.com/agoraanna"}
+            agoraanna
+        %p
+          Viale Lombardia, 40<br />
+          21053 Castellanza VA<br />
+          Italy<br />
+
+      %li
+        .color-box
           = image_tag "stores/store1.png"
         %h2
           TUG STORE
